Fri May 10 10:52:50 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/os_include/signal.h:

	  Use extern "C" for typedef of the ACE_Sig_Handler_Ex function
	  pointer if ACE_HAS_SIG_C_FUNC is defined.  Thanks to Bala for 
	  helping track this down.

	* ace/*.h: (will fill in the list later..)
	* apps/gperf/src/Options.h:
	* apps/gperf/src/Iterator.cpp:
	* apps/gperf/src/List_Node.cpp:
	* apps/drwho/Rwho_DB_Manager.h:
	* apps/drwho/Multicast_Manager.cpp:
	* apps/JAWS/server/Parse_Headers.cpp:

	  Modified includes to match new structure below.
	
	* ace/ace_*.h:
	* ace/os_include/*.h:
	* ace/os_include/netinet/in.h:
	* ace/os_include/sys/*.h:

	  Moved all the new system header wrappers out of the ace
	  directory and into the new os_include directory.  Also removed
	  the "ace_", "ace_sys_", and "ace_netinet_" prefixes and used
	  the standard directory stucture instead.  This should simplify
	  the use and make it easier to understand/maintain.  Thanks to 
	  Bala and Nanbor for this suggestion.

Wed May  8 04:51:12 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/ace_signal.h:  

	  Moved sigset_t typedef to before it's used.

Tue May  7 09:21:50 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/ace_stdio.h:

	  Commented out ifdef that include cstdio.  This was mistakenly
	  copied from config-all.h.  If this cleans up the sun builds, it will
	  be removed completely.

	* ace/Array_Base.inl:

	  Added include of Trace.h.
	
Mon May  6 19:11:05 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/Sched_Params.cpp:

	  Added include of OS.h when ACE_HAS_PRIOCNTL && ACE_HAS_STHREADS
	  are defined.
	
Mon May  6 15:53:39 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/Array_Base.cpp:

	  Added include of OS_Errno.h.

	* ace/Unbounded_Set.cpp:

	  Added include of Global_Macros.h to pick up the ACE_DES* macros.

Mon May  6 09:33:00 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/TLI_Acceptor.cpp:
	* ace/TLI_Stream.i:
	* ace/TLI_Connector.cpp:

	  Added include of ACE.h.
